# soc-l1

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml
deploy/: soc-l1-alert-volume.service  soc-l1-alert-volume.timer  soc-l1-backup.service  soc-l1-backup.timer  soc-l1.service  wazuh-health.service  wazuh-suppress-native-email.md
docs/: BRIEF-CLAUDE-POST-CUTOVER.md  CLEANSWARM.md  ESTADO-SISTEMA-2026-06-23.md  WAZUH_HEALTH.md  fortigate-autoblock-plan.md  fortigate-autoblock-runbook.md  hairpin-aprobacion-interna-leandro.md  runbook-emergencia-fortigate.md  vpn-identity-soc-l1-plan.md
scripts/: aggregate_alert_volume.py  backup-state.sh  disable_old_fgt_blocker.py  fgt_parity.py  fgt_parity_report.py  install-backup.sh  install-systemd.sh  restart.sh  send_test_alert.py  test_ti_apis.py
src/: config.py  executor.py  fortigate_autoblock.py  mailer.py  main.py  models.py  normalize.py  notify.py  security.py  state.py  trace.py
tests/: conftest.py  test_approval_endpoints.py  test_boundaries.py  test_cleanswarm.py  test_cleanswarm_main_safe_import.py  test_cli.py  test_cli_email.py  test_config.py  test_daemon.py  test_defender.py  test_digest.py  test_enricher.py  test_executor.py  test_fortigate.py  test_fortigate_autoblock.py  test_ldap_tools.py  test_mailer.py  test_narrator.py  test_no_write_tools.py  test_normalize.py  test_notify.py  test_pseudonymize.py  test_review_page.py  test_routing.py  test_scheduler.py  test_state.py  test_threatintel.py  test_threatintel_agent.py  test_trace.py  test_triage.py  test_wazuh_api.py  test_webhook.py
(+149 files in other folders)
