[project]
name = "soc-l1"
version = "0.1.0"
description = "SOC L1 multi-agent SOAR for Wazuh + Defender alerts"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "ldap3>=2.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "openai-agents>=0.0.10",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.scripts]
cleanswarm = "src.cleanswarm.cli:main"
wazuh-health = "src.wazuh_health.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wazuh_health", "src/cleanswarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
